manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: o2operator
  labels:
    name: o2operator
    app: openobserve-operator
